fixed duplicate username problem

--- a/Login.html
+++ b/Login.html
@@ -55,10 +55,15 @@
 
 					<div class="container-login100-form-btn" type="submit">
 						<button class="login100-form-btn">
+
 							Login
 						</button>
 					</div>
-
+					<div class="text-center p-t-90">
+						<a class="txt1" href="register.html">
+							Register
+						</a>
+					</div>
 
 				</form>
 			</div>
